// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownItem> when the pathname does not match the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="dropdown-item"
  >
    <a
      class="dropdown-item-link"
      href="/back"
    >
      Go Back
    </a>
  </li>
</DocumentFragment>
`;

exports[`<DropdownItem> when the pathname matches the url should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="dropdown-item"
  >
    <p
      class="dropdown-item-link-disabled text-muted"
    >
      Go Back
    </p>
  </li>
</DocumentFragment>
`;
